# aoc24-cargo-aoc

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
aoc24-day-1/: Cargo.toml
aoc24-day-1/src/: lib.rs  main.rs
cargo-aoc/: Cargo.toml
cargo-aoc/src/: day1.rs  day2.rs  day5.rs  day6.rs  main.rs
cargo-aoc/test_input/2024/: day4_cols.txt
cargo-aoc/test_input/2024/day6/: day6_starting_down_no_obstruction.txt  day6_starting_right_no_obstruction.txt  day6_starting_up_no_obstruction.txt
src/: day1.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs  main.rs
test_input/: day4_diag.txt
test_input/2024/: day4_rows.txt
test_input/2024/day6/: day6_starting_down_obstruction.txt  day6_starting_left_no_obstruction.txt  day6_starting_left_obstruction.txt  day6_starting_right_obstruction.txt  day6_starting_up_obstruction.txt
