[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
aoc-generators = { git = "https://github.com/codersparks/aoc-rust-utils.git" }
aoc-collections = { git = "https://github.com/codersparks/aoc-rust-utils.git" }
tracing = "0.1.41"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.11.1"
